--- a/public/test.html
+++ b/public/test.html
@@ -1,133 +1,86 @@
- <!DOCTYPE html>
-<html dir="ltr" lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>Mapnificent - API Example</title>
-    <meta name="robots" content="index, follow" />
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-  </head>
-    <body>
-      <div id="map" style="width:500px;height:400px;"></div>
-      <div id="loading"></div>
-      <div id="copyright"></div>
-      <script src="http://www.mapnificent.net/media/api/1/mapnificent.js" type="text/javascript" charset="utf-8"></script>
-    <script>
-      //Instantiate map and pass it a div an options
-      // var create_map = function(){
-        var map_div = $('#map')[0];
-        
-        var mapOptions = {
-          mapTypeId: google.maps.MapTypeId.ROADMAP,
-          zoom: 12,
-          center: new google.maps.LatLng(40.7577, -73.9857)
-        };
-        
-        var map =  new google.maps.Map(map_div, mapOptions);
-
-        var coordinates = []         
-      // };
-
-      var mapnificent, urbanDistance, positions = {};
-
-      $(document).ready(function(){
-        // create_map();
-
-        var UrbanDistanceUI = function(mapnificent, that, $, window, undefined){
-          that.bind("setup", function(){
-          	var intersect = that.getOption("intersect");
-          	that.setOption("intersection", true);
-            console.log("setup complete");
-          });
-
-          that.bind("loadProgress", function(progress){
-            $('#loading').text(progress);
-            if(progress >= 100){
-              $('#loading').text("Almost done...");
-            }
-          });
-
-          that.bind("dataLoaded", function(){
-
-          	//Times Square
-            var geopos = {lat: 40.7577, lng: -73.9857};
-            var time = 30*60;
-            var pos = that.addPosition(geopos, time);
-
-            // 55th and 5th ave
-            var geopos_2 = {lat: 40.7618, lng: -73.9754};
-            var time_2 = 30*60;
-            var pos_2 = that.addPosition(geopos_2, time_2);
-
-            // 7th st and Ave B
-            var geopos_3 = {lat: 40.724788, lng: -73.980721};
-            var time_3 = 10*60;
-            var pos_3 = that.addPosition(geopos_3, time_3);
-
-            positions[pos.index] = {position: pos, latlng: geopos};
-            positions[pos_2.index] = {position: pos_2, latlng: geopos_2};
-            positions[pos_3.index] = {position: pos_3, latlng: geopos_3};
-
-            pos.startCalculation();
-            pos_2.startCalculation();
-            pos_3.startCalculation();
-          });
-
-          that.bind("calculationStarted", function(position){
-            $('#loading').text("Starting calculation: 0.0%");
-          });
-
-          that.bind("calculationUpdated", function(position){
-            var percent = position.calculationProgress /
-              that.getOption("estimatedMaxCalculateCalls") * 100;
-            $('#loading').text("Calculating: "+percent+"%");
-          });
-
-          that.bind("calculationDone", function(position){
-            $('#loading').text("Calculation Done!");
-            console.log("calc finished")
-            mapnificent.trigger('redraw');
-            getBlobs();
-          });
-
-          var getBlobs = function(){
-            var blobs = that.search.detectBlobs();
-            console.log(blobs);
-            coordinates.push(blobs);
-          };
-        };
-      if(typeof Mapnificent !== "undefined" && Mapnificent.isBrowserSupported())
-        {
-        Mapnificent.forCoordinates({lat:40.7577,lng:-73.9857}, function(options){
-          if(options == null){
-            return;
-          }
-
-          mapnificent = Mapnificent(options);
-          mapnificent.addLayer("urbanDistance", UrbanDistanceUI);
-          mapnificent.bind("initDone", function(){
-          	// mapnificent.hide();
-          });
-
-          mapnificent.addToMap(map);
-        });
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <title>Simple markers</title>
+    <style>
+      html, body, #map-canvas {
+        height: 100%;
+        margin: 0px;
+        padding: 0px
       }
+    </style>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+    <script>
+function initialize() {
+  var myLatlng = new google.maps.LatLng(40.75723111165119, -73.98194061584472);
+  // var myLatlng_2 = new google.maps.LatLng(40.7609506602, -73.9786351)
+  // var myLatlng_3 = new google.maps.LatLng(40.756097808118405, -73.98122101135255)
+  // var myLatlng_4 = new google.maps.LatLng(40.75444918081328, -73.98467003173828)
 
-      // var pixel_midpoints = coordinates[1]
-      // var midpoints = []
-      // $.each(pixel_midpoints, function(index, blob){
-      //   // var coordinate_midpoint = mapnificent.getLatLngFromCanvasXY(blob.midx, blob.midy);
-      //   console.log(coordinate_midpoint);
-      //    midpoints.push(coordinate_midpoint);
-      // });
 
-      // console.log(midpoints);
+  var myLatlng_2 = new google.maps.LatLng(40.767928, -73.9819)
+  var myLatlng_3 = new google.maps.LatLng(40.764799, -73.9808019)
+  var myLatlng_4 = new google.maps.LatLng(40.7645169, -73.9771169)
+  var myLatlng_5 = new google.maps.LatLng(40.75684852465495, -73.98177846450807)
+  var myLatlng_6 = new google.maps.LatLng(40.75789504409629, -73.97574364013671)
+  var myLatlng_7 = new google.maps.LatLng(40.757439940314846, -73.98999153442382)
+  var myLatlng_8 = new google.maps.LatLng(40.74989776690082, -73.98793159790038)
 
-    });
-			
-			
+
+
+  var mapOptions = {
+    zoom: 12,
+    center: myLatlng
+  }
+  var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
+  var marker = new google.maps.Marker({
+      position: myLatlng_2,
+      map: map,
+      title: 'Object 1'
+  });
+
+  var marker = new google.maps.Marker({
+      position: myLatlng_3,
+      map: map,
+      title: 'Object 2'
+  });
+
+  var marker = new google.maps.Marker({
+      position: myLatlng_4,
+      map: map,
+      title: 'Object 3'
+  });
+    var marker = new google.maps.Marker({
+      position: myLatlng_5,
+      map: map,
+      title: 'Object 4'
+  });
+      var marker = new google.maps.Marker({
+      position: myLatlng_6,
+      map: map,
+      title: 'Object 5'
+  });
+        var marker = new google.maps.Marker({
+      position: myLatlng_7,
+      map: map,
+      title: 'Object 6'
+  });
+          var marker = new google.maps.Marker({
+      position: myLatlng_8,
+      map: map,
+      title: 'Object 7'
+  });
+
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
-   
+  </head>
+  <body>
+    <div id="map-canvas"></div>
   </body>
-</html>    
+</html>
